--- a/src/app/main-menu/main-menu.component.css
+++ b/src/app/main-menu/main-menu.component.css
@@ -1,3 +1,13 @@
-.main-menu{
-  background-color: ivory;
+.main-menu-container{
+  background-color: black;
+  padding: 10px;
+  width: 1000px;
+  height: 900px;
+  margin: 0 auto;
+  text-align: center;
 }
+
+.button{
+  
+}
+
