--- a/src/app/main-menu/main-menu.component.html
+++ b/src/app/main-menu/main-menu.component.html
@@ -1,6 +1,7 @@
 <div class= "main-menu-container">
-<h1 style="text-align: center; color:crimson; font-family: fantasy; font-weight: bolder; font-size: 60px;"> LEFT HOOK LOW KICK </h1>
-<button class="button">Play</button>
+<h1 class="title"> LEFT HOOK LOW KICK </h1>
+<button class="play-button">FIGHT</button>
+<button class="help-button">HELP</button>
 </div>
 
 
