--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,13 @@
+
 <div class="background">
-  <app-main-menu></app-main-menu>
+  <div class= "main-menu-container">
+    <h1 class="title"> LEFT HOOK LOW KICK </h1>
+    <button class="play-button">FIGHT</button>
+    <button class="help-button">HELP</button>
+    </div>
+
+
+
 </div>
+
 
