created help page and player type page

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,13 +1,7 @@
-
 <div class="background">
-  <div class= "main-menu-container">
-    <h1 class="title"> LEFT HOOK LOW KICK </h1>
-    <button class="play-button">FIGHT</button>
-    <button class="help-button">HELP</button>
-    </div>
-
-
-
+<h1 class="title"> LEFT HOOK LOW KICK </h1>
+<router-outlet></router-outlet>
 </div>
+
 
 
