--- a/src/app/help/help.component.html
+++ b/src/app/help/help.component.html
@@ -1,1 +1,16 @@
-<p>help works!</p>
+<div class="helpPage">
+  <p>
+    Left Hook Low Kick is a turn-based game with 4 attacks and 4 defenses to match:
+  </p>
+    <h2>Left Hook     / Block Left Hook</h2>
+    <h2>Right Hook    / Block Right Hook</h2>
+    <h2>Left Low Kick / Check Left Low Kick</h2>
+    <h2>Right Low Hook / Check Right Low Kick</h2>
+
+    <p>
+      Each player has the chance to pick two moves in their turn.
+    </p>
+    <h2>FIGHT UNTIL YOU LOSE ALL LIVES!</h2>
+
+<button class="back-button" [routerLink]="['/']" routerLinkActive="router-link-active">GOT IT</button>
+</div>
