--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,6 +1,11 @@
 .background{
-  background-color: black;
+  background-color: rgb(47, 6, 158);
   margin: 0;
+  text-align: center;
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+  min-height: 100%;
 
 }
 
@@ -11,6 +16,9 @@
   font-weight: bolder;
   font-size: 100px;
   animation: pulseAnimation 0.5s infinite alternate;
+  -webkit-user-select: none; /* Safari */
+  -ms-user-select: none; /* IE 10 and IE 11 */
+  user-select: none; /* Standard syntax */
 }
 
 @keyframes pulseAnimation {
@@ -22,50 +30,7 @@
   }
 }
 
-.main-menu-container{
-  background-color: black;
-  padding: 10px;
-  width: 1000px;
-  height: 900px;
-  margin: 0 auto;
-  text-align: center;
-  align-items: center;
-  justify-content: center;
-  display: flex;
-  flex-direction: column;
-}
 
-.play-button{
-    width: 200px;
-    height: 150px;
-    border-radius: 20%;
-    font-size: 80px;
-    font-family: SHATTERB;
-    color: crimson;
-    background-color: black;
-    transition: transform 0.2s ease-in-out;
-    border-style: none;
-
-}
-
-.help-button{
-  width: 200px;
-  height: 150px;
-  border-radius: 20%;
-  font-size: 80px;
-  font-family: SHATTERB;
-  color: crimson;
-  background-color: black;
-  transition: transform 0.2s ease-in-out;
-  border-style: none;
-
-}
-
-button:hover{
-  background-color: crimson;
-  color: white;
-  transform: scale(1.05);
-}
 
 
 
