created difficulty page

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,5 +1,5 @@
 .background{
-  background-color: rgb(47, 6, 158);
+  background-color: black;
   margin: 0;
   text-align: center;
   align-items: center;
