--- a/src/app/difficulty-select/difficulty-select.component.html
+++ b/src/app/difficulty-select/difficulty-select.component.html
@@ -1,1 +1,8 @@
-<p>difficulty-select works!</p>
+<div class="playerTypePage">
+  <button class = "button"> Amateur</button>
+  <button class = "button"> Rookie </button>
+  <button class = "button"> Veteran</button>
+
+
+
+</div>
