--- a/src/app/help/help.component.html
+++ b/src/app/help/help.component.html
@@ -1,6 +1,6 @@
 <div class="helpPage">
   <p>
-    Left Hook Low Kick is a turn-based game with 4 attacks and 4 defenses to match:
+    Left Hook Low Kick is a turn-based game with 4 attacks and 4 defenses:
   </p>
     <h2>Left Hook     / Block Left Hook</h2>
     <h2>Right Hook    / Block Right Hook</h2>
