--- a/src/app/help/help.component.css
+++ b/src/app/help/help.component.css
@@ -12,6 +12,9 @@
   border-color: rgb(143, 7, 7);
   font-family: SHATTERB;
   color: white;
+  -webkit-user-select: none; /* Safari */
+  -ms-user-select: none; /* IE 10 and IE 11 */
+  user-select: none; /* Standard syntax */
 
 }
 
@@ -21,17 +24,16 @@
   border-radius: 20%;
   font-size: 30px;
   font-family: SHATTERB;
-
-  background-color: white;
   color: crimson;
+  background-color: black;
   transition: transform 0.2s ease-in-out;
   border-style: none;
 
 }
 
 button:hover{
+  background-color: white;
   color: crimson;
-  background-color: rgb(47, 6, 158);
   transform: scale(1.05);
 }
 
