--- a/src/app/main-menu/main-menu.component.css
+++ b/src/app/main-menu/main-menu.component.css
@@ -5,7 +5,7 @@
   font-size: 80px;
   font-family: SHATTERB;
   color: crimson;
-  background-color: rgb(47, 6, 158);
+  background-color: black;
   transition: transform 0.2s ease-in-out;
   border-style: none;
 
@@ -18,14 +18,14 @@ border-radius: 20%;
 font-size: 80px;
 font-family: SHATTERB;
 color: crimson;
-background-color: rgb(47, 6, 158);
+background-color: black;
 transition: transform 0.2s ease-in-out;
 border-style: none;
 
 }
 
 .whole-container{
-  background-color: rgb(47, 6, 158);
+  background-color: black;
   padding: 10px;
   width: 1000px;
   height: 100%;
