--- a/src/app/main-menu/main-menu.component.html
+++ b/src/app/main-menu/main-menu.component.html
@@ -1,6 +1,6 @@
 <div class="background">
   <div class= "whole-container">
-    <button class="play-button" [routerLink]="['/playertype-select']" routerLinkActive="router-link-active" >FIGHT</button>
+    <button class="play-button" [routerLink]="['/player-type']" routerLinkActive="router-link-active" >FIGHT</button>
     <button class="help-button" [routerLink]="['/help']" routerLinkActive="router-link-active" >HELP</button>
     </div>
 
