created game page

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,10 @@
-<div class="background">
-<h1 class="title"> LEFT HOOK LOW KICK </h1>
-<router-outlet></router-outlet>
-</div>
+<body>
+  <div class="background">
+    <h1 class="title"> LEFT HOOK LOW KICK </h1>
+    <router-outlet></router-outlet>
+    </div>
+</body>
+
 
 
 
