--- a/src/app/help/help.component.html
+++ b/src/app/help/help.component.html
@@ -2,13 +2,13 @@
   <p>
     Left Hook Low Kick is a turn-based game with 4 attacks and 4 defenses:
   </p>
-    <h2>Left Hook     / Block Left Hook</h2>
-    <h2>Right Hook    / Block Right Hook</h2>
-    <h2>Left Low Kick / Check Left Low Kick</h2>
-    <h2>Right Low Hook / Check Right Low Kick</h2>
+    <h2>Head Shot     / Block Head</h2>
+    <h2>Body Shot   / Block Body</h2>
+    <h2>Left Low Kick / Check Left Kick</h2>
+    <h2>Right Low Hook / Check Right Kick</h2>
 
     <p>
-      Each player has the chance to pick two moves in their turn.
+      Each player has the chance to pick two moves per turn.
     </p>
     <h2>FIGHT UNTIL YOU LOSE ALL LIVES!</h2>
 
