--- a/src/app/lives-select/lives-select.component.css
+++ b/src/app/lives-select/lives-select.component.css
@@ -28,6 +28,9 @@
   background-color: black;
   transition: transform 0.2s ease-in-out;
   border-style: none;
+  -webkit-user-select: none; /* Safari */
+  -ms-user-select: none; /* IE 10 and IE 11 */
+  user-select: none; /* Standard syntax */
 
 }
 
@@ -54,6 +57,9 @@ mat-slider{
   background-color: black;
   transition: transform 0.2s ease-in-out;
   border-style: none;
+  -webkit-user-select: none; /* Safari */
+  -ms-user-select: none; /* IE 10 and IE 11 */
+  user-select: none; /* Standard syntax */
 
 }
 
