--- a/src/app/playertype-select/playertype-select.component.css
+++ b/src/app/playertype-select/playertype-select.component.css
@@ -13,6 +13,9 @@
   font-family: SHATTERB;
   color: white;
   justify-content: center;
+  -webkit-user-select: none; /* Safari */
+  -ms-user-select: none; /* IE 10 and IE 11 */
+  user-select: none; /* Standard syntax */
 
 
 }
