--- a/src/app/popup-help/popup-help.component.html
+++ b/src/app/popup-help/popup-help.component.html
@@ -1,7 +1,5 @@
 <div class="helpPage">
-  <h4>
-    Left Hook Low Kick is a turn-based game inspired by Rock, Paper, Scissors with 3 attacks:
-  </h4>
+
     <h2>Head Shot - Head Shot Beats Body Shot</h2>
     <h2>Body Shot - Body Shot Beats Low Kick</h2>
     <h2>Low Kick - Low Kick Beats Head Shot</h2>
@@ -11,6 +9,5 @@
     </h2>
     <h2>FIGHT UNTIL YOU LOSE ALL LIVES!</h2>
 
-<button class="back-button" [routerLink]="['/']" routerLinkActive="router-link-active">GOT IT</button>
+<button class="back-button" [routerLink]="['/bot-game']" routerLinkActive="router-link-active">GOT IT</button>
 </div>
-
