--- a/src/app/lives-select/lives-select.component.html
+++ b/src/app/lives-select/lives-select.component.html
@@ -6,12 +6,13 @@
   -ms-user-select: none; /* IE 10 and IE 11 */
   user-select: none; /* Standard syntax */">SELECT NUMBER OF LIVES</div>
 
-  <mat-slider min="1" max="10" step="1" showTickMarks discrete>
-    <input matSliderThumb>
-  </mat-slider>
+<mat-slider min="1" max="10" step="1" showTickMarks discrete (input)="onSliderChange($event)">
+  <input matSliderThumb>
+</mat-slider>
 
-  <button class="button" [routerLink]="['/game']" routerLinkActive="router-link-active" >START</button>
 
-  <button class="back-button" [routerLink]="['/player-type']" routerLinkActive="router-link-active" >Back</button>
+  <button class="button" [routerLink]="['/player-type']" routerLinkActive="router-link-active">START</button>
+
+  <button class="back-button" [routerLink]="['/']" routerLinkActive="router-link-active" >Back</button>
 
 </div>
