--- a/src/app/main-menu/main-menu.component.css
+++ b/src/app/main-menu/main-menu.component.css
@@ -1,5 +1,5 @@
 .play-button{
-  width: 200px;
+  width: 400px;
   height: 150px;
   border-radius: 20%;
   font-size: 80px;
@@ -8,11 +8,12 @@
   background-color: black;
   transition: transform 0.2s ease-in-out;
   border-style: none;
+  margin-bottom: 20px;
 
 }
 
 .help-button{
-width: 200px;
+width: 400px;
 height: 150px;
 border-radius: 20%;
 font-size: 80px;
@@ -39,7 +40,28 @@ border-style: none;
 
 
 button:hover{
-  background-color: crimson;
-  color: white;
+  background-color: white ;
+  color: crimson;
   transform: scale(1.05);
+}
+
+.Page{
+  background-color: crimson;
+  width: 900px;
+  height: 500px;
+  text-align: center;
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+  border-style: inset;
+  border-width: 25px;
+  border-color: rgb(143, 7, 7);
+  font-family: SHATTERB;
+  color: white;
+  justify-content: center;
+  -webkit-user-select: none; /* Safari */
+  -ms-user-select: none; /* IE 10 and IE 11 */
+  user-select: none; /* Standard syntax */
+
+
 }
