added more stuff

--- a/src/app/help/help.component.css
+++ b/src/app/help/help.component.css
@@ -10,7 +10,7 @@
   border-style: inset;
   border-width: 25px;
   border-color: rgb(143, 7, 7);
-  font-family: SHATTERB;
+  font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
   color: white;
   -webkit-user-select: none; /* Safari */
   -ms-user-select: none; /* IE 10 and IE 11 */
