--- a/src/app/help/help.component.html
+++ b/src/app/help/help.component.html
@@ -1,5 +1,5 @@
 <div class="helpPage">
-  <h4>
+  <h4 style="font-family: SHATTERB;">
     Left Hook Low Kick is a turn-based game inspired by Rock, Paper, Scissors with 3 attacks:
   </h4>
     <h2>Head Shot - Head Shot Beats Body Shot</h2>
@@ -9,7 +9,7 @@
     <h2>
       Each player has one move per turn.
     </h2>
-    <h2>FIGHT UNTIL YOU LOSE ALL LIVES!</h2>
+    <h2 style="font-family: SHATTERB;">FIGHT UNTIL YOU LOSE ALL LIVES!</h2>
 
 <button class="back-button" [routerLink]="['/']" routerLinkActive="router-link-active">GOT IT</button>
 </div>
