--- a/src/app/local-game/local-game.component.html
+++ b/src/app/local-game/local-game.component.html
@@ -1,9 +1,26 @@
 <body>
   <div class="header-container">
     <div class="rounds">Round {{this.RoundNum}}</div>
-    <button class="comp-buttons" [routerLink]="['/']" routerLinkActive="router-link-active">
-      Home
-    </button>
+    &nbsp;
+    &nbsp;
+    &nbsp;
+    &nbsp;
+    &nbsp;
+    &nbsp;
+    &nbsp;
+    &nbsp;
+    &nbsp;
+    <div class="noPeaking" >NO PEAKING! {{this.currentPlayer.name}}'s EYES ONLY</div>
+
+    <div class="header-container">
+      <button class="comp-buttons" (click)="openHelpPopup()">
+        HELP
+      </button>
+      <button class="comp-buttons" [routerLink]="['/']" routerLinkActive="router-link-active">
+        HOME
+      </button>
+    </div>
+
   </div>
 
   <div class="container">
@@ -13,7 +30,7 @@
         <!-- head -->
 
           <svg width="100" height="100">
-          <circle cx="50" cy="50" r="40" fill="black" />
+           <circle cx="50" cy="50" r="40" [attr.fill]="players.player1.limbs.head ? 'red' : 'black'" [class.flash-effect]="players.player1.limbs.head" />
         </svg>
 
         <!-- body and arms-->
