--- a/src/app/winner-popup/winner-popup.component.html
+++ b/src/app/winner-popup/winner-popup.component.html
@@ -2,7 +2,7 @@
   <div class="box">
     <h1 style="font-size: 30px;">{{winner}}</h1>
      <button class="button" routerLink="/" (click)="close()">HOME</button>
-     <button class="button">PLAY AGAIN</button>
+     <button class="button" (click)="onPlayAgain()">PLAY AGAIN</button>
   </div>
 </body>
 
