--- a/src/app/local-game/local-game.component.html
+++ b/src/app/local-game/local-game.component.html
@@ -30,21 +30,21 @@
         <!-- head -->
 
           <svg width="100" height="100">
-           <circle cx="50" cy="50" r="40" [attr.fill]="players.player1.limbs.head ? 'red' : 'black'" [class.flash-effect]="players.player1.limbs.head" />
+           <circle cx="50" cy="50" r="40" fill="crimson" />
         </svg>
 
         <!-- body and arms-->
 
           <div>
             <svg width="100" height="130">
-              <rect x="50" y="0" width="40" height="120" fill="grey" />
+              <rect x="50" y="0" width="40" height="120" fill="crimson" />
             </svg>
 
             <svg width="100" height="130">
-              <rect x="0" y="0" width="100" height="120" fill="black" />
+              <rect x="0" y="0" width="100" height="120" fill="crimson" />
             </svg>
             <svg width="100" height="130">
-              <rect x="10" y="0" width="40" height="120" fill="grey" />
+              <rect x="10" y="0" width="40" height="120" fill="crimson" />
             </svg>
           </div>
 
@@ -52,11 +52,11 @@
 
           <div>
             <svg width="100" height="120">
-              <rect x="50" y="0" width="40" height="120" fill="black" />
+              <rect x="50" y="0" width="40" height="120" fill="crimson" />
             </svg>
 
             <svg width="100" height="120">
-              <rect x="10" y="0" width="40" height="120" fill="black" />
+              <rect x="10" y="0" width="40" height="120" fill="crimson" />
             </svg>
 
 
@@ -128,7 +128,7 @@
         <!-- head -->
 
           <svg width="100" height="100">
-          <circle cx="50" cy="50" r="40" fill="black" />
+          <circle cx="50" cy="50" r="40" fill="blue" />
         </svg>
 
 
@@ -136,15 +136,15 @@
 
           <div>
             <svg width="100" height="130">
-              <rect x="50" y="0" width="40" height="120" fill="grey" />
+              <rect x="50" y="0" width="40" height="120" fill="blue" />
             </svg>
 
             <svg width="100" height="130">
-              <rect x="0" y="0" width="100" height="120" fill="black" />
+              <rect x="0" y="0" width="100" height="120" fill="blue" />
             </svg>
 
             <svg width="100" height="130">
-              <rect x="10" y="0" width="40" height="120" fill="grey" />
+              <rect x="10" y="0" width="40" height="120" fill="blue" />
             </svg>
           </div>
 
@@ -154,11 +154,11 @@
         <div>
 
              <svg width="100" height="120">
-               <rect x="50" y="0" width="40" height="120" fill="black" />
+               <rect x="50" y="0" width="40" height="120" fill="blue" />
              </svg>
 
              <svg width="100" height="120">
-               <rect x="10" y="0" width="40" height="120" fill="black" />
+               <rect x="10" y="0" width="40" height="120" fill="blue" />
              </svg>
 
 
